fix: remove overflow behavior, fix notes view scrolling issue (#51)

--- a/apps/web-app/src/app.css
+++ b/apps/web-app/src/app.css
@@ -12,6 +12,7 @@
 
   body {
     @apply leading-relaxed bg-bg font-['Inter_Variable',sans-serif];
+    overscroll-behavior: none;
   }
 
   button {
